--- a/sare_masivo/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_masivo/src/main/webapp/WEB-INF/resource/css/app.css
@@ -301,7 +301,7 @@ nav ul a {
 
 .container-cleelist .wrap-list{
   display: grid;
-  grid-template-columns: 33% 33% 34%;
+  grid-template-columns: 33% 67%;
   padding: 10px;
 }
 
