--- a/sare_seg/src/main/webapp/WEB-INF/reportes/registroAvancesPunteados_prueba.jrxml
+++ b/sare_seg/src/main/webapp/WEB-INF/reportes/registroAvancesPunteados_prueba.jrxml
@@ -514,7 +514,7 @@ end cestatal, 2 orden,
             FROM  ce2019_MASRENCAL.tr_predios pre
             join ce2019_MASRENCAL.tr_inmuebles inm on inm.id_inmueble=pre.id_inmueble
             join ce2019_MASRENCAL.tr_etq_val ue on ue.id_ue=pre.id_ue
-            WHERE
+            WHERE pre.punteo_sare=1 and id_cuestionario=54 and id_encuesta=38 and 
 ue.c154 IN ('01','01A','A1','01C','05','06') AND 1=1
 
             GROUP BY ue.ce, ue.c154
