--- a/sare_seg/src/main/webapp/WEB-INF/reportes/registroAvancesPunteados_ege.jrxml
+++ b/sare_seg/src/main/webapp/WEB-INF/reportes/registroAvancesPunteados_ege.jrxml
@@ -271,63 +271,65 @@
 		</parameter>
 		<queryString>
 			<![CDATA[SELECT ce,cestatal,  carga_1, realizado_1, carga_1 - realizado_1 pendientes_1   FROM (
-SELECT 0 ce, 'NAC' cestatal, 1 orden,
+SELECT '0' ce, 'NAC' cestatal, 1 orden,
 
             sum(CASE WHEN  st_sare in ('10','20', '01') THEN 1 ELSE 0 END) carga_1,
             sum(CASE WHEN  st_sare in ('01') THEN 1 ELSE 0 END) realizado_1
-            FROM  ce2019_MASRENCAL.tr_predios pre
+            FROM  ce2019_masrencal.tr_plan_oper po 
+            join ce2019_MASRENCAL.tr_predios pre on pre.id_cop=po.id_cop 
             join ce2019_MASRENCAL.tr_inmuebles inm on inm.id_inmueble=pre.id_inmueble
             join ce2019_MASRENCAL.tr_etq_val ue on ue.id_ue=pre.id_ue
             WHERE  inm.id_ue is not null and st_sare in ('10','20', '01')
             and pre.punteo_sare=1 and (ue.ID_CUESTIONARIO!=54 and id_encuesta!=38)
 
 union all
-SELECT ue.ce, CASE
-            WHEN  ue.ce ='01' THEN 'AGS'
-            WHEN  ue.ce ='02' THEN 'BCN'
-            WHEN  ue.ce ='03' THEN 'BCS'
-            WHEN  ue.ce ='04' THEN 'CAM'
-            WHEN  ue.ce ='05' THEN 'COA'
-            WHEN  ue.ce ='06' THEN 'COL'
-            WHEN  ue.ce ='07' THEN 'CHS'
-            WHEN  ue.ce ='08' THEN 'CHI'
-            WHEN  ue.ce ='09' THEN 'DFN'
-            WHEN  ue.ce ='10' THEN 'DGO'
-            WHEN  ue.ce ='11' THEN 'GTO'
-            WHEN  ue.ce ='12' THEN 'GRO'
-            WHEN  ue.ce ='13' THEN 'HGO'
-            WHEN  ue.ce ='14' THEN 'JAL'
-            WHEN  ue.ce ='15' THEN 'MEO'
-            WHEN  ue.ce ='16' THEN 'MIC'
-            WHEN  ue.ce ='17' THEN 'MOR'
-            WHEN  ue.ce ='18' THEN 'NAY'
-            WHEN  ue.ce ='19' THEN 'NLN'
-            WHEN  ue.ce ='20' THEN 'OAX'
-            WHEN  ue.ce ='21' THEN 'PUE'
-            WHEN  ue.ce ='22' THEN 'QRO'
-            WHEN  ue.ce ='23' THEN 'QTR'
-            WHEN  ue.ce ='24' THEN 'SLP'
-            WHEN  ue.ce ='25' THEN 'SIN'
-            WHEN  ue.ce ='26' THEN 'SON'
-            WHEN  ue.ce ='27' THEN 'TAB'
-            WHEN  ue.ce ='28' THEN 'TAM'
-            WHEN  ue.ce ='29' THEN 'TLA'
-            WHEN  ue.ce ='30' THEN 'VER'
-            WHEN  ue.ce ='31' THEN 'YUC'
-            WHEN  ue.ce ='32' THEN 'ZAC'
-            WHEN  ue.ce ='33' THEN 'DFS'
-            WHEN  ue.ce ='34' THEN 'MEP'
+SELECT substr(po.cve_operativa,0,2) ce, CASE
+            WHEN  substr(po.cve_operativa,0,2) ='01' THEN 'AGS'
+            WHEN  substr(po.cve_operativa,0,2) ='02' THEN 'BCN'
+            WHEN  substr(po.cve_operativa,0,2) ='03' THEN 'BCS'
+            WHEN  substr(po.cve_operativa,0,2) ='04' THEN 'CAM'
+            WHEN  substr(po.cve_operativa,0,2) ='05' THEN 'COA'
+            WHEN  substr(po.cve_operativa,0,2) ='06' THEN 'COL'
+            WHEN  substr(po.cve_operativa,0,2) ='07' THEN 'CHS'
+            WHEN  substr(po.cve_operativa,0,2) ='08' THEN 'CHI'
+            WHEN  substr(po.cve_operativa,0,2) ='09' THEN 'DFN'
+            WHEN  substr(po.cve_operativa,0,2) ='10' THEN 'DGO'
+            WHEN  substr(po.cve_operativa,0,2) ='11' THEN 'GTO'
+            WHEN  substr(po.cve_operativa,0,2) ='12' THEN 'GRO'
+            WHEN  substr(po.cve_operativa,0,2) ='13' THEN 'HGO'
+            WHEN  substr(po.cve_operativa,0,2) ='14' THEN 'JAL'
+            WHEN  substr(po.cve_operativa,0,2) ='15' THEN 'MEO'
+            WHEN  substr(po.cve_operativa,0,2) ='16' THEN 'MIC'
+            WHEN  substr(po.cve_operativa,0,2) ='17' THEN 'MOR'
+            WHEN  substr(po.cve_operativa,0,2) ='18' THEN 'NAY'
+            WHEN  substr(po.cve_operativa,0,2) ='19' THEN 'NLN'
+            WHEN  substr(po.cve_operativa,0,2) ='20' THEN 'OAX'
+            WHEN  substr(po.cve_operativa,0,2) ='21' THEN 'PUE'
+            WHEN  substr(po.cve_operativa,0,2) ='22' THEN 'QRO'
+            WHEN  substr(po.cve_operativa,0,2) ='23' THEN 'QTR'
+            WHEN  substr(po.cve_operativa,0,2) ='24' THEN 'SLP'
+            WHEN  substr(po.cve_operativa,0,2) ='25' THEN 'SIN'
+            WHEN  substr(po.cve_operativa,0,2) ='26' THEN 'SON'
+            WHEN substr(po.cve_operativa,0,2) ='27' THEN 'TAB'
+            WHEN  substr(po.cve_operativa,0,2) ='28' THEN 'TAM'
+            WHEN  substr(po.cve_operativa,0,2) ='29' THEN 'TLA'
+            WHEN  substr(po.cve_operativa,0,2) ='30' THEN 'VER'
+            WHEN  substr(po.cve_operativa,0,2) ='31' THEN 'YUC'
+            WHEN  substr(po.cve_operativa,0,2) ='32' THEN 'ZAC'
+            WHEN  substr(po.cve_operativa,0,2) ='33' THEN 'DFS'
+            WHEN  substr(po.cve_operativa,0,2) ='34' THEN 'MEP'
 
 end cestatal, 2 orden,
           sum(CASE WHEN   st_sare in ('10','20', '01') THEN 1 ELSE 0 END) carga_1,
             sum(CASE WHEN   st_sare in ('01') THEN 1 ELSE 0 END) realizado_1
-            FROM  ce2019_MASRENCAL.tr_predios pre
+            FROM  ce2019_masrencal.tr_plan_oper po 
+            join ce2019_MASRENCAL.tr_predios pre on pre.id_cop=po.id_cop
             join ce2019_MASRENCAL.tr_inmuebles inm on inm.id_inmueble=pre.id_inmueble
             join ce2019_MASRENCAL.tr_etq_val ue on ue.id_ue=pre.id_ue
             WHERE inm.id_ue is not null and  st_sare in ('10','20', '01')
-             and pre.punteo_sare=1 and (ue.ID_CUESTIONARIO!=54 and id_encuesta!=38) $P!{where1}
-            GROUP BY ue.ce
-) dd  order by ce]]>
+             and pre.punteo_sare=1 $P!{where1}
+            GROUP BY po.cve_operativa
+) dd   order by ce]]>
 		</queryString>
 		<field name="CE" class="java.math.BigDecimal"/>
 		<field name="CESTATAL" class="java.lang.String"/>
@@ -342,62 +344,64 @@ end cestatal, 2 orden,
 	<parameter name="URL" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[SELECT ce,cestatal,  carga_1, realizado_1, carga_1 - realizado_1 pendientes_1   FROM (
-SELECT 0 ce, 'NAC' cestatal, 1 orden,
+SELECT '0' ce, 'NAC' cestatal, 1 orden,
 
             sum(CASE WHEN  st_sare in ('10','20', '01') THEN 1 ELSE 0 END) carga_1,
             sum(CASE WHEN  st_sare in ('01') THEN 1 ELSE 0 END) realizado_1
-            FROM  ce2019_MASRENCAL.tr_predios pre
+            FROM  ce2019_masrencal.tr_plan_oper po 
+            join ce2019_MASRENCAL.tr_predios pre on pre.id_cop=po.id_cop 
             join ce2019_MASRENCAL.tr_inmuebles inm on inm.id_inmueble=pre.id_inmueble
             join ce2019_MASRENCAL.tr_etq_val ue on ue.id_ue=pre.id_ue
             WHERE  inm.id_ue is not null and st_sare in ('10','20', '01')
             and pre.punteo_sare=1 and (ue.ID_CUESTIONARIO!=54 and id_encuesta!=38)
 
 union all
-SELECT ue.ce, CASE
-            WHEN  ue.ce ='01' THEN 'AGS'
-            WHEN  ue.ce ='02' THEN 'BCN'
-            WHEN  ue.ce ='03' THEN 'BCS'
-            WHEN  ue.ce ='04' THEN 'CAM'
-            WHEN  ue.ce ='05' THEN 'COA'
-            WHEN  ue.ce ='06' THEN 'COL'
-            WHEN  ue.ce ='07' THEN 'CHS'
-            WHEN  ue.ce ='08' THEN 'CHI'
-            WHEN  ue.ce ='09' THEN 'DFN'
-            WHEN  ue.ce ='10' THEN 'DGO'
-            WHEN  ue.ce ='11' THEN 'GTO'
-            WHEN  ue.ce ='12' THEN 'GRO'
-            WHEN  ue.ce ='13' THEN 'HGO'
-            WHEN  ue.ce ='14' THEN 'JAL'
-            WHEN  ue.ce ='15' THEN 'MEO'
-            WHEN  ue.ce ='16' THEN 'MIC'
-            WHEN  ue.ce ='17' THEN 'MOR'
-            WHEN  ue.ce ='18' THEN 'NAY'
-            WHEN  ue.ce ='19' THEN 'NLN'
-            WHEN  ue.ce ='20' THEN 'OAX'
-            WHEN  ue.ce ='21' THEN 'PUE'
-            WHEN  ue.ce ='22' THEN 'QRO'
-            WHEN  ue.ce ='23' THEN 'QTR'
-            WHEN  ue.ce ='24' THEN 'SLP'
-            WHEN  ue.ce ='25' THEN 'SIN'
-            WHEN  ue.ce ='26' THEN 'SON'
-            WHEN  ue.ce ='27' THEN 'TAB'
-            WHEN  ue.ce ='28' THEN 'TAM'
-            WHEN  ue.ce ='29' THEN 'TLA'
-            WHEN  ue.ce ='30' THEN 'VER'
-            WHEN  ue.ce ='31' THEN 'YUC'
-            WHEN  ue.ce ='32' THEN 'ZAC'
-            WHEN  ue.ce ='33' THEN 'DFS'
-            WHEN  ue.ce ='34' THEN 'MEP'
+SELECT substr(po.cve_operativa,0,2) ce, CASE
+            WHEN  substr(po.cve_operativa,0,2) ='01' THEN 'AGS'
+            WHEN  substr(po.cve_operativa,0,2) ='02' THEN 'BCN'
+            WHEN  substr(po.cve_operativa,0,2) ='03' THEN 'BCS'
+            WHEN  substr(po.cve_operativa,0,2) ='04' THEN 'CAM'
+            WHEN  substr(po.cve_operativa,0,2) ='05' THEN 'COA'
+            WHEN  substr(po.cve_operativa,0,2) ='06' THEN 'COL'
+            WHEN  substr(po.cve_operativa,0,2) ='07' THEN 'CHS'
+            WHEN  substr(po.cve_operativa,0,2) ='08' THEN 'CHI'
+            WHEN  substr(po.cve_operativa,0,2) ='09' THEN 'DFN'
+            WHEN  substr(po.cve_operativa,0,2) ='10' THEN 'DGO'
+            WHEN  substr(po.cve_operativa,0,2) ='11' THEN 'GTO'
+            WHEN  substr(po.cve_operativa,0,2) ='12' THEN 'GRO'
+            WHEN  substr(po.cve_operativa,0,2) ='13' THEN 'HGO'
+            WHEN  substr(po.cve_operativa,0,2) ='14' THEN 'JAL'
+            WHEN  substr(po.cve_operativa,0,2) ='15' THEN 'MEO'
+            WHEN  substr(po.cve_operativa,0,2) ='16' THEN 'MIC'
+            WHEN  substr(po.cve_operativa,0,2) ='17' THEN 'MOR'
+            WHEN  substr(po.cve_operativa,0,2) ='18' THEN 'NAY'
+            WHEN  substr(po.cve_operativa,0,2) ='19' THEN 'NLN'
+            WHEN  substr(po.cve_operativa,0,2) ='20' THEN 'OAX'
+            WHEN  substr(po.cve_operativa,0,2) ='21' THEN 'PUE'
+            WHEN  substr(po.cve_operativa,0,2) ='22' THEN 'QRO'
+            WHEN  substr(po.cve_operativa,0,2) ='23' THEN 'QTR'
+            WHEN  substr(po.cve_operativa,0,2) ='24' THEN 'SLP'
+            WHEN  substr(po.cve_operativa,0,2) ='25' THEN 'SIN'
+            WHEN  substr(po.cve_operativa,0,2) ='26' THEN 'SON'
+            WHEN substr(po.cve_operativa,0,2) ='27' THEN 'TAB'
+            WHEN  substr(po.cve_operativa,0,2) ='28' THEN 'TAM'
+            WHEN  substr(po.cve_operativa,0,2) ='29' THEN 'TLA'
+            WHEN  substr(po.cve_operativa,0,2) ='30' THEN 'VER'
+            WHEN  substr(po.cve_operativa,0,2) ='31' THEN 'YUC'
+            WHEN  substr(po.cve_operativa,0,2) ='32' THEN 'ZAC'
+            WHEN  substr(po.cve_operativa,0,2) ='33' THEN 'DFS'
+            WHEN  substr(po.cve_operativa,0,2) ='34' THEN 'MEP'
 
 end cestatal, 2 orden,
           sum(CASE WHEN   st_sare in ('10','20', '01') THEN 1 ELSE 0 END) carga_1,
             sum(CASE WHEN   st_sare in ('01') THEN 1 ELSE 0 END) realizado_1
-            FROM  ce2019_MASRENCAL.tr_predios pre
+            FROM  ce2019_masrencal.tr_plan_oper po 
+            join ce2019_MASRENCAL.tr_predios pre on pre.id_cop=po.id_cop
             join ce2019_MASRENCAL.tr_inmuebles inm on inm.id_inmueble=pre.id_inmueble
             join ce2019_MASRENCAL.tr_etq_val ue on ue.id_ue=pre.id_ue
             WHERE inm.id_ue is not null and  st_sare in ('10','20', '01')
-             and pre.punteo_sare=1 and (ue.ID_CUESTIONARIO!=54 and id_encuesta!=38)
-            GROUP BY ue.ce
+             and pre.punteo_sare=1 $P!{where} --substr(po.cve_operativa,0,2)='01'
+            GROUP BY po.cve_operativa
 ) dd where rownum<2  order by ce]]>
 	</queryString>
 	<field name="CE" class="java.math.BigDecimal"/>
